--- a/franske-course-information/modules/itc-2611/pages/index.adoc
+++ b/franske-course-information/modules/itc-2611/pages/index.adoc
@@ -1,5 +1,16 @@
-= Future ITC-2480 Home Page
+= Dr. Franske's ITC-2611 Home Page
 
-Welcome to my new page!
+This is the homepage for the ITC-2611 classes taught by Dr. Ben Franske. 
+
+== General Course Information
+
+* xref:syllabus.adoc[Course Syllabus]
+* xref:schedule.adoc[Official Course Schedule]
+* xref:assignments.adoc[Course Assignment List and Instructions (Includes Labs & Homework)]
+* xref:lab-reports:index.adoc[Instructions for Writing Lab Reports and Sample Lab Reports]
+* xref:forum-posting:index.adoc[Instructions for Participating in Forum Discussions and Example Posts]
+* Assessments, discussion forums, and labs available at http://www.netacad.com
+
+== Resources
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
