--- a/franske-course-information/modules/itc-2611/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2611/pages/schedule.adoc
@@ -1,183 +1,27 @@
-= ITC-2480 Official Course Schedule and Readings
+= ITC-2516 Official Course Schedule
 
 == Official Course Schedule
-* DH refers to the https://debian-handbook.info/get/now/[Debian Administrator's Handbook (Debian 10 Edition) by Raphaël Hertzog and Roland Mas]
-* LCL refers to http://sourceforge.net/projects/linuxcommand/files/TLCL/19.01/TLCL-19.01.pdf/download[The Linux Command Line by William Shotts]
-* Other online readings are linked to below the schedule table
-
 [%autowidth,options="header"]
-|===
-|Date |Week |Topic # |Topic |Readings to do before this date |Lab Activities to do before the next date |Assignments Due Today by 11:59pm
-|12-Jan
-|1
-|Topic 1
-|Intro/Syllabus/Install/VPN Access
-|
-|Lab 1
-|
-|19-Jan
-|2
-|Topic 2
-|CLI Basics, Package Installation, Basic User Intro
-|DH Sections 4.2, 6.1-6.10, 7.1-7.2, LCL Chapters 2-4, 18
-|Lab 2
-|Lab Report for Topic 1, First Forum Postings for Topics 1 & 2, Weekly Progress Self-Evaluation
-|26-Jan
-|3
-|Topic 3
-|Users, Boot Process, Webmin
-|LCL Chapter 9, DH Sections 8.4-8.5, 9.1, 8.8
-|Lab 3
-|Final Forum Postings for Topics 1 & 2, Lab Report for Topic 2, Weekly Progress Self-Evaluation
-|2-Feb
-|4
-|Topic 4
-|Advanced Command Line
-|LCL Chapters 5-7, 12, 17, DH Appendix B.1, Online text editor tutorials
-|Lab 4
-|Topic 1/2 Exam, Weekly Progress Self-Evaluation
-|9-Feb
-|5
-|Topic 5
-|Network Configuration, Apache, MySQL
-|DH Sections 8.2 intro, 8.2.1, 11.2, 9.5, Online MySQL Readings, Online Log File Readings
-|Lab 5
-|First Forum Postings for Topics 3-5, Weekly Progress Self-Evaluation
-|16-Feb
-|6
-|Topic 6
-|LAMP Software
-|Online LAMP Software Readings
-|Lab 6
-|Final Forum Postings & Lab Reports for Topics 3-5, Weekly Progress Self-Evaluation
-|23-Feb
-|7
-|Topic 7
-|Windows Filesharing with Samba
-|DH Section 11.5, The Samba Configuration File Comments, Online SAMBA Readings
-|Lab 7
-|Topics 3-5 Exams, Weekly Progress Self-Evaluation
-|2-Mar
-|8
-|Topic 8
-|DNS
-|DH Section 10.7, Online DNS Readings
-|Lab 8
-|First Forum Postings for Topics 6-8, Weekly Progress Self-Evaluation
-|9-Mar
-|SPRING BREAK
-|
-|
-|
-|
-|
-|16-Mar
-|9
-|Topic 9
-|Mail Servers (SMTP/POP3/IMAP)
-|DH Section 11.1, Online Mail Server Readings
-|Lab 9
-|Final Forum Postings & Lab Reports for Topics 6-8, Weekly Progress Self-Evaluation
-|23-Mar
-|10
-|Topic 10
-|DHCP, Firewalls/NAT
-|DH Section 10.8, 14.2, 10.1, Online Firewall Readings
-|Lab 10
-|Topics 7 & 8 Exams, Weekly Progress Self-Evaluation
-|30-Mar
-|11
-|Topic 11
-|Filesystem Layout, Disks, LVM
-|DH Appendix B.2, B.4.2, LCL Chapter 15, DH Section 12.1
-|Lab 11
-|First Forum Postings for Topics 9-11, Weekly Progress Self-Evaluation
-|6-Apr
-|12
-|Topic 12
-|Security & Monitoring
-|DH Section 10.9, 14.3, 14.6
-|Lab 12
-|Final Forum Postings & Lab Reports for Topics 9-11, Weekly Progress Self-Evaluation
-|13-Apr
-|13
-|Topic 13
-|Scripting with BASH
-|LCL Chapter 24, Online BASH Scripting Readings
-|Lab 13
-|Topics 9-11 Exams, Weekly Progress Self-Evaluation
-|20-Apr
-|14
-|Topic 14
-|Scripting II: Python
-|Online Python Scripting Readings
-|Lab 14
-|First Forum Postings for Topics 12-14, Weekly Progress Self-Evaluation
-|27-Apr
-|15
-|
-|Catch Up / Final Skills Practice
-|
-|
-|Final Forum Postings for Topics 12-14 & Lab Report for Topic 12, Weekly Progress Self-Evaluation NOTE: Access to your VM will end Apr 29 so that it can be prepared for the skills exam which is open Apr 30- May 4
-|
-|4-May
-|16
-|Topic 15
-|Final Skills Exam (Opens Apr 30)
-|
-|Final Skills Exam Due Tonight
-|Topic 13-14 Lab Report, Topic 12-14 Exams, Final Skills Exam
-|11-May
-|FE Week
-|Topic 15
-|Final Written Exam
-|
-|
-|Final Written Exam
-|===
+|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
+| Date    | Week                            | Readings to do before the next date  | Work to do in class today                            | Work to do before the next date                                                                                                                | Assignments Due (Today by 2:00pm unless otherwise noted)                                                                                                                                                                             
+| 22-Aug  | 1                               | Modules 1 & 2                        | Course Introduction, Verify NetAcad Access           | Module 2 Packet Tracer Activities, Module 1 & 2 Online Discussion First Posts                                                                  |                                                                                                                                                                                                                                      
+| 29-Aug  | 2                               | Modules 3 & 4                        | Module 2 Lab Activities, Instructor Meeting          | Module 3 & 4 Packet Tracer Activities, Module 1 & 2 Online Discussion Response Posts, Module 3 & 4 Online Discussion First Posts               | Module 1 & 2 Online Discussion First Posts                                                                                                                                                                                           
+| 5-Sep   | 3 - NO CLASS MEETING LABOR DAY  | Modules 5, 6 & 7                     |                                                      | Module 3 & 4 Online Discussion Response Posts, Module 5, 6 & 7 Online Discussion First Posts                                                   | Module 2, 3 & 4 Packet Tracer Submissions, Module 2 Lab Reports, Module 1 & 2 All Discussion Posts, Module 3 & 4 First Discussion Posts, Module 1-3 Exam                                                                             
+| 12-Sep  | 4                               | Modules 8, 9 & 10                    | Module 3, 4, & 7 Lab Activities, Instructor Meeting  | Module 9 & 10 Packet Tracer Activities, Module 5-7 Discussion Response Posts, Module 8-10 Discussion First Posts                               | Module 3 & 4 All Discussion Posts, Module 5-7 First Discussion Posts, Module 4-7 Exam                                                                                                                                                
+| 19-Sep  | 5                               | Module 11                            | Module 9 & 10 Lab Activities, Instructor Meeting     | Module 11 Packet Tracer and Homework Activities, Module 8-10 Discussion Response Posts, Module 11 Discussion First Posts                       | Module 3, 4, & 7 Lab Reports, Module 9 & 10 Packet Tracer Submissions, Module 5-7 All Discussion Posts, Module 8-10 Discussion First Posts, Module 8-10 Exam                                                                         
+| 26-Sep  | 6                               | Module 12 & 13                       | Instructor Meeting                                   | Module 12 & 13 Packet Tracer and Homework Activities, Module 11 Discussion Response Posts, Module 12-13 Discussion First Posts                 | Module 9 & 10 Lab Repots, Module 11 Packet Tracer Submissions and Homework, Module 8-10 All Discussion Posts, Module 11 First Discussion Posts                                                                                       
+| 3-Oct   | 7                               | Module 14 & 15                       | Module 12 & 13 Lab Activities, Instructor Meeting    | Module 12 & 13 Discussion Response Posts, Module 14-15 Discussion First Posts                                                                  | Module 12 & 13 Packet Tracer Submissions and Homework, Module 11 All Discussion Posts, Module 12-13 Discussion First Posts, Module 11-13 Exam                                                                                        
+| 10-Oct  | 8                               | Module 16 & 17                       | Module 14 & 15 Lab Activities, Instructor Meeting    | Module 16 & 17 Packet Tracer Activities, Module 14 & 15 Discussion Response Posts, Module 16-17 Discussion First Posts                         | Module 12 & 13 Lab Reports, Module 12 & 13 All Discussion Posts, Module 14-15 Discussion First Posts, Module 14-15 Exam                                                                                                              
+| 17-Oct  | 9                               |                                      | Module 16 & 17 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 16 & 17 Packet Tracer Submissions, Module 14 & 15 Lab Reports ,Module 14-15 All Discussion Posts, Module 16 & 17 First Discussion Posts, Module 16-17 Exam                                                                    
+| 24-Oct  | 10                              | CCNA 2 Modules 1, 2 & 3              | CCNA 1 Equipment Skills Exam                         | Module 1 & 3 Packet Tracer Activities, Module 1-3 Discussion First Posts                                                                       | Module 16 & 17 Lab Reports, CCNA 1 Practice Final Exam, CCNA 1 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 1 Online Final Exam, CCNA 1 PT Skills Assessment, CCNA 1 Modules 16-17 All Discussion Posts           
+| 31-Oct  | 11                              | Modules 4 & 5                        | Module 1 & 3 Lab Activities, Instructor Meeting      | Module 4 Packet Tracer Activities, Module 1-3 Discussion Response Posts, Module 4 & 5 Discussion First Posts                                   | Module 1 & 3 Packet Tracer Submissions, Module 1-3 Discussion First Posts                                                                                                                                                            
+| 7-Nov   | 12                              | Modules 6, 7 & 8                     | Module 4 & 5 Lab Activities, Instructor Meeting      | Module 6 & 7 Packet Tracer Activities, Module 4 & 5 Discussion Response Posts, Module 6-8 Discussion First Posts                               | Module 1 & 3 Lab Reports, Module 4 & 5 Packet Tracer Online Submissions, Module 1-3 All Discussion Posts, Module 4 & 5 Discussion First Posts, Module 1-4 Exam                                                                       
+| 14-Nov  | 13                              | Modules 9, 10 & 11                   | Module 6, 7, & 8 Lab Activities, Instructor Meeting  | Module 9 & 11 Packet Tracer Activities, Module 6-8 Discussion Response Posts, Module 9-11 Discussion First Posts                               | Module 4 & 5 Lab Reports, Module 6, 7 & 8 Packet Tracer Online Submissions, Module 4 & 5 All Discussion Posts, Module 6-8 Discussion First Posts, Module 5-6 Exam                                                                    
+| 21-Nov  | 14                              | Modules 12 & 13                      | Module 11 Lab Activities, Instructor Meeting         | Module 13 Packet Tracer Activities, Module 9-11 Discussion Response Posts, Module 12 & 13 Discussion First Posts                               | Module 6, 7, & 8 Lab Reports, Module 9 & 11 Packet Tracer Online Submissions, Module 6-8 All Discussion Posts, Module 9-11 Discussion First Posts                                                                                    
+| 28-Nov  | 15                              | Modules 14, 15 & 16                  | Module 13 Lab Activities, Instructor Meeting         | Module 14, 15 & 16 Packet Tracer Activities, Module 12 & 13 Discussion Response Posts, Module 14-16 Discussion First Posts                     | Module 11 Lab Reports, Module 13 Packet Tracer Online Submissions, Module 9-11 Discussion All Posts, Module 12 & 13 Discussion First Posts, Module 7-9 Exam                                                                          
+| 5-Dec   | 16                              |                                      | Module 15 & 16 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 13 Lab Reports, Module 14, 15 & 16 Packet Tracer Online Submissions, Module 12 & 13 Discussion All Posts, Module 14-16 Discussion First Posts, Module 10-13 Exam                                                              
+| 12-Dec  | FE Week                         |                                      | CCNA 2 Equipment Skills Exam                         |                                                                                                                                                | Module 15 & 16 Lab Reports, CCNA 2 Practice Final Exam, CCNA 2 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 2 Online Final Exam, CCNA 2 PT Skills Assessment, Module 14-16 Exam, Module 14-16 All Discussion Posts
+|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
 
-== Online Readings
-=== Online Text Editor Tutorials
-* http://staffwww.fullcoll.edu/sedwards/Nano/IntroToNano.html[Introduction to Nano]
-* http://www.washington.edu/computing/unix/vi.html[Using Vi]
-
-=== Online MySQL Readings
-* http://www.guru99.com/introduction-to-database-sql.html[What is a database? & What is SQL?]
-* http://zetcode.com/databases/mysqltutorial/introduction/[Introduction to MySQL]
-* http://zetcode.com/databases/mysqltutorial/firststeps/[First Steps in MySQL]
-* http://zetcode.com/databases/mysqltutorial/quick/[MySQL Quick Tutorial]
-
-=== Online Log File Readings
-* https://help.ubuntu.com/community/LinuxLogFiles[Ubuntu Documentation: Linux Log Files]
-
-=== Online LAMP Software Readings
-* http://www.serverwatch.com/tutorials/article.php/3567741/Understanding-LAMP.htm[Understanding LAMP (All 3 Pages)]
-* https://www.linode.com/docs/websites/apache-tips-and-tricks/apache-configuration-basics[Apache Configuration Basics]
-* https://code.tutsplus.com/articles/apache-2-basic-configuration-on-unix-like-systems--net-26607[Apache 2 Basic Configuration on Unix-Like Systems]
-* https://codex.wordpress.org/Installing_WordPress[Installing WordPress]
-
-=== Online SAMBA Readings
-* https://ubuntu.com/server/docs/samba-file-server[Introduction to SAMBA]
-* https://ubuntu.com/server/docs/samba-file-server[SAMBA Fileserver Configuration]
-
-=== Online DNS Readings
-* http://www.zytrax.com/books/dns/ch2/[DNS Concepts]
-* http://www.zytrax.com/books/dns/ch4/[DNS Configuration Types]
-* http://www.zytrax.com/books/dns/ch8/[DNS Zone Records]
-
-=== Online Mail Server Readings
-* https://help.ubuntu.com/community/PostfixBasicSetupHowto[Postfix Basic Setup]
-
-=== Online Firewall Readings
-* https://computingforgeeks.com/how-to-install-and-configure-firewalld-on-debian/[How to Install and Configure Firewalld on Debian]
-* https://linuxconfig.org/introduction-to-firewalld-and-firewall-cmd-command-on-linux[Introduction to firewalld and firewall-cmd command on Linux]
-
-=== Online BASH Scripting Readings
-* http://tldp.org/HOWTO/Bash-Prog-Intro-HOWTO.html[BASH Programming HOWTO]
-
-=== Online Python Scripting Readings
-* https://folk.idi.ntnu.no/mlh/hetland_org/writing/instant-hacking.html[Python Instant Hacking]
-* https://web.archive.org/web/20210424072311/http://www.dreamsyssoft.com/python-scripting-tutorial/index.php[dreamsys Python Scripting Tutorial]
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
