--- a/franske-course-information/modules/itc-2300/pages/index.adoc
+++ b/franske-course-information/modules/itc-2300/pages/index.adoc
@@ -1,5 +1,25 @@
-= Future ITC-2480 Home Page
+= Dr. Franske's ITC-2300 Home Page
 
-Welcome to my new page!
+This is the homepage for the ITC-2300 classes taught by Dr. Ben Franske. 
+
+== General Course Information
+
+* xref:syllabus.adoc[Course Syllabus]
+* xref:schedule.adoc[Official Course Schedule]
+* xref:assignments.adoc[Course Assignment List and Instructions (Includes Labs & Homework)]
+* xref:lab-reports:index.adoc[Instructions for Writing Lab Reports and Sample Lab Reports]
+* xref:forum-posting:index.adoc[Instructions for Participating in Forum Discussions and Example Posts]
+* Assessments, discussion forums, labs, gradebook, readings, available at http://class.ihitc.net (access via D2L link if you are logged out)
+
+== Resources
+
+=== Voice over IP
+
+* https://www.cisco.com/c/en/us/support/docs/voice/voice-quality/7934-bwidth-consume.html[Voice Over IP - Per Call Bandwidth Consumption]
+
+==== Phones
+
+* xref:tech-info:voip:cisco-phone-registration.adoc[Cisco IP Phone Registration Troubleshooting]
+* xref:tech-info:voip:cisco-phone-security.adoc[Clearing Cisco IP Phone Security Files]
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
