--- a/franske-course-information/modules/itc-2300/pages/syllabus.adoc
+++ b/franske-course-information/modules/itc-2300/pages/syllabus.adoc
@@ -1,85 +1,44 @@
-= ITC-2516 Syllabus
-Course Name: Introduction to Networks and Switching, Routing, and Wireless Essentials (CCNA 1/2) +
-Course Number: ITC-2516-61 +
+= ITC-2300 Syllabus
+Course Name: Information Technology Services and Applications +
+Course Number: ITC-2300-91 +
 Instructor: Dr. Ben Franske +
 Term: Fall 2022 (8/22/2022-12/15/2022) +
-Meetings: M 2:00-4:50pm +
-Location: B109 & Online
+Meetings: W 6:00-8:30pm +
+Location: B144
 
 == Instructor Contact Information
 include::ROOT:partial$instructor-contact.adoc[]
 
 == General Course Information
 === Prerequisite(s)
-* ITC 1400 or departmental assessment (see course notes).
-* Placement into ENG 1108 or completion of both ENG 0099 and READ 0093/0094 with a grade of C or higher.
+* ITC 2515 or ITC 2520 or CCENT Certification
 
 === Course Description
-Introduces the architecture, structure, functions, components, and models of the Internet and other computer networks as well as the implementation of basic enterprise routing, switching, and wireless technologies. The fundamentals of IP addressing, Ethernet, router, switch, and wireless configuration are practiced through hands-on lab work. By the end of this course, students will be able to configure and troubleshoot routers and switches and resolve common issues with VLANs, Spanning-Tree, EtherChannel, Wireless LANs, DHCP, SLAAC, static IP routes, and first-hop redundancy protocols.
-
-Course Note: The prerequisite for this course can be waived upon proof of passing an IT fundamentals examination administered by the department. Contact the instructor or department for more information. 
+Introduces current technologies and network applications commonly supported and used by information technology professionals above and beyond basic infrastructure or servers, operating systems, and network devices. Provides the concepts behind and hands-on lab experience with at least three technologies such as VoIP/collaboration, security monitoring, virtualization, storage networking, mobile/BYOD device management which are transforming the IT landscape.
 
 === Required Resources
-* CCNA Routing and Switching Portable Command Guide (5th Edition) (Empson) ISBN: 978013593782-2
-* External USB Drive, 8GB free minimum, flash drive or hard drive
+* External USB3 Drive, 256GB free minimum
 
 === Optional Resources
-* Introduction to Networks v7.0 (ITN) Labs & Study Guide ISBN: 9780136634454
-* Switching, Routing, and Wireless Essentials v7.0 (SRWE) Labs & Study Guide ISBN: 9780136634386 (used halfway through the semester)
-* Introduction to Networks v7.0 (ITN) Course Booklet ISBN: 9780136632955
-* Introduction to Networks v7.0 (ITN) Companion Guide ISBN: 9780136633662
-* Switching, Routing, and Wireless Essentials v7.0 (SRWE) Course Booklet ISBN: 9780136634720
-* Switching, Routing, and Wireless Essentials v7.0 (SRWE) Companion Guide ISBN: 9780136729358
 
 === Course Website(s)
 * ITC Info (https://info.ihitc.net)
-* Cisco Networking Academy (http://www.netacad.com)
-WARNING: It is important that you keep an accurate email address on file with the Cisco Networking Academy site and/or regularly sign on to the site to check your Networking Academy Inbox. Important and time-sensitive course information may be distributed through the Networking Academy messaging system. If you have an accurate email address you can receive the information by email as well.
+* ITC Class Server: http://class.ihitc.net (access via D2L link if you are logged out) Assessments, discussion forums, labs, gradebook, and readings are available here.
 
 == Lab Time
-* Equipment Labs in the CCNA 1 portion of the class must be completed with physical equipment on campus or at home with your own equipment (requires advance instructor permission).
-* Equipment Labs in the CCNA 1 portion of the class must be completed with physical equipment on campus or at home with your own equipment (requires advance instructor permission) unless the instructor gives you special permission to use remote access equipment.
+* This class will require on campus lab resources
 * Equipment access, both physical on campus and remote Netlab, is on a first come, first served basis.
-* Packet Tracer Labs may be completed on campus or at home and submitted through the ScoreUP system.
 * Additional open on campus lab time may also be available under the supervision of the lab assistant or ITC department instructors, contact the instructor or ITC lab assistant for more information. Students who do not show up for open lab hours they have scheduled may be restricted from registering for open lab hours in the future.  
 
 == Course Objectives
 The student will be able to:
 
-* Explain the advances in modern network technologies.
-* Implement initial settings including passwords, IP addressing, and default gateway parameters on a network switch and end devices.
-* Explain how network protocols enable devices to access local and remote network resources.
-* Explain how physical layer protocols, services, and network media support communications across data networks.
-* Convert numbers between decimal and binary systems.
-* Explain how media access control in the data link layer supports communication across networks.
-* Explain how Ethernet operates in a switched network.
-* Explain how routers use network layer protocols and services to enable end-to-end connectivity.
-* Explain how ARP and ND enable communication on a local area network.
-* Implement initial settings on a router and end devices.
-* Calculate an IPv4 subnetting scheme to efficiently segment your network.
-* Implement an IPv6 addressing scheme.
-* Use various ICMP tools to test network connectivity.
-* Compare the operations of transport layer protocols in supporting end-to-end communication.
-* Explain the operation of application layer protocols in providing support to end-user applications.
-* Configure switches and routers with device hardening features to enhance security.
-* Implement a network design for a small network to include a router, a switch, and end devices.
-* Configure devices by using security best practices.
-* Explain how Layer 2 switches forward data.
-* Implement VLANs and trunking in a switched network.
-* Troubleshoot inter-VLAN routing on Layer 3 devices.
-* Explain how STP enables redundancy in a Layer 2 network.
-* Troubleshoot EtherChannel on switched links.
-* Implement DHCPv4 to operate across multiple LANs.
-* Explain the operation of dynamic address allocation in IPv6 networks.
-* Explain how FHRPs provide default gateway services in a redundant network.
-* Explain how vulnerabilities compromise LAN security.
-* Configure switch security to mitigate LAN attacks.
-* Explain how WLANs enable network connectivity.
-* Implement a WLAN using a wireless router and WLC.
-* Explain how routers use information in packets to make forwarding decisions.
-* Configure IPv4 and IPv6 floating static routes.
-* Explain how to troubleshoot static and default route configurations.
+* Describe the changing landscape of the IT department
+* Describe at least three current technologies or network applications commonly used or supported by IT departments
+* Demonstrate the ability to perform a basic installation, configuration, and testing of at least three current technologies or network applications commonly used or supported by IT departments
+* Analyze and explain the key features and benefits of three current technologies or network applications commonly used or supported by IT departments
 * Students will practice business soft skills including written, active listening, and oral presentation.
+* Students will document evidence of business skill practice in an electronic portfolio.
 
 == Course Design
 This course will be taught as a hybrid course with regular instructor meetings. This means that you and your lab partner will be meeting regularly with the instructor during the on campus course time to assess your progress unless you have received special permission from the instructor. Additional details about this are available on the course website. 
@@ -122,9 +81,7 @@ If you miss or do poorly on a regular unit/module/chapter exam (not a final exam
 |===
 
 === Grading Method and Availability
-This course is a combination of two Cisco Networking Academy courses, CCNA 1 and CCNA 2. Grades for each of these two courses will be calculated separately following the method below and then the two courses will be averaged for a final grade in the single 6 credit college course.
-
-Grades for each course is calculated based on a weighted points system. Each assignment, quiz or test is assigned to one of the weighted categories below and is graded on a points system. Your percentage is calculated for each category by dividing the points earned in that category by the points available. Finally, your percentage earned in each category is multiplied by the weight of that category and these are added together. The instructor may round up based on student participation and individual improvement. 
+Grades for this course are calculated based on a weighted points system. Each assignment, quiz or test is assigned to one of the weighted categories below and is graded on a points system. Your percentage is calculated for each category by dividing the points earned in that category by the points available. Finally, your percentage earned in each category is multiplied by the weight of that category and these are added together. The instructor may round up based on student participation and individual improvement. 
  
 [%autowidth,options="header"]
 |===
@@ -132,13 +89,13 @@ Grades for each course is calculated based on a weighted points system. Each ass
 |Unit Assessments 
 |20%
 |Lab/Homework Assignments 
-|35%
+|40%
 |Regular Final Exam 
 |15%
-|Skills Based Final Exam
+|Case Study Project
 |15%
 |Participation Activities
-|15% 
+|10% 
 |===
 
 Detailed information about assignments and which category they are included in is on the "Assignments" page of the course website.
@@ -150,16 +107,7 @@ CAUTION: Be aware that the final grade in online gradebooks may be calculated in
 === Extra Credit
 Students should not rely on extra credit to boost their grade and should instead complete each assignment to the best of their ability. However, from time to time extra credit opportunities may arise at which time they will be announced in class, by email and/or through the course website. Unless otherwise noted extra credit will be added to the Lab/Homework Assignments category. 
 
-=== Special Note on Exam Cheating
-It is unacceptable to look for or find copies of exams, exam questions, or scenarios online and use them to complete your exam. Answering a question or scenario incorrectly based on the exam you are taking but in a way that was indicated as correct on a version of the exam which was found online will be seen as evidence of intentional cheating. You will receive a penalty and it will be reported as indicated in the course and campus policies section below.
-
-In plain English... I know some copies of exams for this course circulate online. I look at these and may modify the exam you are given so that a different answer is correct for what looks to be a similar question. You may call these "trick questions" but in this case they are only a trick question if you have seen a stolen copy of an old exam. If you answer one or more of these as shown on the stolen exam this will be evidence of cheating and you will be punished according to cheating policies. Do not cheat, do not look for or use stolen exams.
-
-See the course and campus policies section below for additional information on cheating policies. 
-
 === Special Note on Lab Cheating
-In the case of Packet Tracer activities this means you must start with the file provided by your instructor or as part of the curriculum and complete the activity yourself. You may of course ask others for help figuring something out but you must do the work yourself. Do not simply follow tutorials or videos from start to finish showing how to complete the activity as that will not allow you to learn the process and you will likely score poorly on lab exams. You may never ask anyone else to complete an activity for you or turn in an activity completed by someone else, this will be treated as cheating.
-
 In the case of lab activities which are designed to use physical lab equipment you must work on physical lab equipment, no simulators are allowed. Unless specific permission is given by the instructor this means you must use the IHCC lab equipment on campus or the IHCC Netlab remote lab system. Any evidence that you have turned in a lab report for a lab which is designed to be completed on physical equipment without using physical equipment will be treated as cheating.
 
 See the course and campus policies section below for additional information on cheating policies. 
